# Homomorphic_Encryption

./: CMakeLists.txt  README.md
src/: client_decryption.cpp  client_encryption.cpp  server_evaluation.cpp
